made some changes using git

--- a/IPL-EDA.ipynb
+++ b/IPL-EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7901caab",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,8 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import warnings"
    ]
   },
   {
