--- a/IPL-EDA.ipynb
+++ b/IPL-EDA.ipynb
@@ -9104,6 +9104,33 @@
    "source": [
     "ipl_ball.groupby('batsman')['batsman_runs'].sum().sort_values(ascending=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ca95576",
+   "metadata": {},
+   "source": [
+    "# Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5e1e4da1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c531c56e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
